--- a/package.json
+++ b/package.json
@@ -4,22 +4,33 @@
   "author": "Shayan Saif",
   "private": true,
   "license": "ISC",
+  "engines": {
+    "node": ">=20.13"
+  },
+  "main": "src/main.ts",
   "scripts": {
-    "dev": "nodemon -r tsconfig-paths/register src/app.ts",
+    "dev": "nodemon -r tsconfig-paths/register src/main.ts",
+    "test": "jest",
     "deploy": "serverless deploy --stage=dev"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.12",
     "@types/mongoose": "^5.11.97",
+    "@types/supertest": "^6.0.2",
     "esbuild": "^0.14.25",
     "globals": "^15.3.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.4.0",
     "prettier": "3.3.0",
-    "serverless-esbuild": "^1.25.0"
+    "serverless-esbuild": "^1.25.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.5"
   },
   "dependencies": {
-    "@types/cookie-parser": "^1.4.7",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
     "aws-sdk": "^2.1632.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
