--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "@/*": ["*"]
     },
     "outDir": "./.build",
-    "rootDir": "./src",
+    "rootDir": "./",
     "strict": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
