--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "deploy": "serverless deploy --stage=dev"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@faker-js/faker": "^8.4.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/supertest": "^6.0.2",
     "esbuild": "^0.14.25",
@@ -28,7 +29,8 @@
     "prettier": "3.3.0",
     "serverless-esbuild": "^1.25.0",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.1.5"
+    "ts-jest": "^29.1.5",
+    "tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
     "aws-sdk": "^2.1632.0",
