--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "dev": "nodemon -r tsconfig-paths/register src/main.ts",
     "test": "jest",
+    "format": "prettier --write .",
     "deploy:dev": "serverless deploy --stage=dev",
     "deploy:prod": "serverless deploy --stage=prod"
   },
