--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,6 @@
     "forceConsistentCasingInFileNames": true,
     "typeRoots": ["./types", "./node_modules/@types"]
   },
-  "include": [
-    "src/**/*.ts",
-    "tests/**/*.ts",
-    "types/global.d.ts"
-  ],
+  "include": ["src/**/*.ts", "tests/**/*.ts", "types/global.d.ts"],
   "exclude": ["node_modules"]
 }
